Multi user request processing.
Each discovery request is executed in a separate process
with UID taken from JWT.
